# fleet-sdk

./: .env  .env.example  .gitignore  Makefile  README.md  RELEASE.md  browser_harness.py  claw_harness.py  debug_instance_creation.py  fleet_harness.py  pydoc-markdown.yaml  pyproject.toml  requirements.txt  run_bundle.py  run_bundle_simple.py  snapshot_env-03e89c90-1753394177_1753394362.json  snapshot_env-09837219-1753398049_1753398132.json  snapshot_env-4c7e95b7-1753397414_1753397617.json  snapshot_env-7ed707e9-1753393892_1753394084.json  snapshot_env-aa5f0e64-1753398651_1753398743.json  snapshot_env-b38873c5-1753398922_1753399158.json  snapshot_env-faee81de-1753394770_1753394885.json  test.py  test_bundle.b64  test_bundler_and_run.py  test_bundler_simple.py  test_comprehensive_suite.py  test_dependency_detection.py  test_load_tasks_filters.py  test_module_api.py  test_new_format.py  test_signature_only.py  test_simple.py  test_simple_create.py  zuba.py
.github/workflows/: publish-fleet-sdk-alpha.yml  publish-fleet-sdk.yml  publish-sdk.yml  sdk-tests.yml
devdocs/: bundle-structure.md  bundle-tracking-optimization.md  server-side-todos.md  tree-shaking.md
docs/fleet-track/: README.md  (+6 more)
examples/: .env  browser_control_example.py  connection_diagnostic.py  debug_logging_example.py  delivery.py  diff_example.py  dsl_example.py  example.ipynb  example.py  example_account.py  example_client.py  example_mcp_anthropic.py  example_mcp_openai.py  example_sync.py  example_task.py  example_tasks.py  example_v3.py  example_verifier.py  export_tasks.py  gemini_example.py  import_tasks.py  iterate_verifiers.py  json_tasks_example.py  nova_act_example.py  openai_example.py  openai_simple_example.py  query_builder_example.py  quickstart.py  test.ipynb  update_output_schemas.py
fleet/: __init__.py  _auth_headers.py  _supabase.py  auth.py  base.py  browser.py  cli.py  client.py  config.py  exceptions.py  global_client.py  judge.py  llm_provider.py  models.py  playwright.py  tasks.py  types.py
fleet_python.egg-info/: PKG-INFO  SOURCES.txt
fleet_sdk.egg-info/: PKG-INFO  SOURCES.txt
scripts/: fix_sync_imports.py  prepare-alpha-release.sh  remove_discard_sessions.py  sessions_to_remove.csv  validate-release-tag.sh
test_bundle_extracted/: requirements.txt  verifier.py  zuba.py
tests/: README.md  conftest.py  pytest.ini  requirements.txt  run_tests.py  test_auth.py  test_base_auth.py  test_cli_auth.py  test_error_messaging_v2.py  test_expect_exactly.py  test_expect_only.py  test_instance_dispatch.py  test_judge.py  test_judge_criteria_markers.py  test_judge_endpoint.py  test_llm_provider.py  test_s3_resource.py  test_verifier_criteria.py
(+205 files in other folders)
