[project]
name = "fleet-python"
version = "0.2.17"
description = "Python SDK for Fleet environments"
authors = [
    {name = "Fleet AI", email = "nic@fleet.so"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[build-system]
requires = ["uv_build>=0.7.10,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
    "unasync>=0.6.0",
]

[tool.uv.build-backend]
module-root = ""
module-name = "fleet"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ty.environment]
root          = ["./fleet"]

[tool.ty.rules]
index-out-of-bounds = "ignore"
